# dspace-utils

./: .gitignore  CHANGES.txt  LICENSE  environment.yml  pyproject.toml  setup.cfg
dspace_utils/: __init__.py  collections.py  commandline.py  common.py  licenses.py  metadata.py  migration.py  thumbnails.py
tests/: common.py  test_collections.py  test_commandline.py  test_common.py  test_credentials.py  test_licenses.py  test_metadata.py  test_migrate_to_live.py  test_thumbnail.py
tests/data/: collection.json  collection.txt  community.json  community.txt  item.json  license.txt  smoke.json  smoke.txt
