[metadata]
name = dspace-utils
version = 0.0.8
author = 'John Evans'
author_email = 'john.evans8@montana.edu'
license = 'MIT'
classifiers = 
    Programming Languages :: Python
    Programming Languages :: Python :: 3.11
    Programming Languages :: Python :: 3.12
    Programming Languages :: Python :: Implementation :: CPython
    License :: OSI Approved :: MIT License
    Intended Audience :: OS Independent

[options.entry_points]
console_scripts = 
    create-dspace-collection = dspace_utils.commandline:run_create_collection
    dump-dso = dspace_utils.commandline:run_dump_item_metadata
    update-dspace-license = dspace_utils.commandline:run_change_license
    move-dspace-item = dspace_utils.commandline:run_change_owning_collection
    migrate-to-live = dspace_utils.commandline:run_live_migration
    update-dspace-thumbnail = dspace_utils.commandline:run_thumbnail_generator
